Changed input text to textarea

--- a/server/home.html
+++ b/server/home.html
@@ -86,7 +86,7 @@
                     <button id="close">Close</button>
                 </p>
                 <p>
-                    <input id="input" type="text"/>
+                    <textarea id="input" type="text"></textarea>
                     <button id="send">Send</button>
                 </p>
             </form>
